--- a/views/main.html
+++ b/views/main.html
@@ -20,4 +20,67 @@
                 </form>
             </div>
         {% endif %}
+            <div class="twits">
+                <form action="/hashtag" id="hashtag-form">
+                    <input type="text" name="hashtag" placeholder="태그 검색">
+                    <button class="btn">검색</button>
+                </form>
+                {% for twit in twits %}
+                    <div class="twit">
+                        <input type="hidden" value="{{twit.User.id}}" class="twit-user-id">
+                        <input type="hidden" value="{{twit.id}}" class="twit-id">
+                        <div class="twit-author">{{twit.User.nick}}</div>
+                        {% if not followerIdList.include(twit.User.id) and twit.User.id !== user.id %}
+                            <button class="twit-follow">팔로우하기</button>
+                        {% endif %}
+                        <div class="twit-content">{{twit.content}}</div>
+                        {% if twit.img %}
+                            <div class="twit-img">
+                                <img src="{{twit.img}}" alt="섬네일">
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
     </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        if (document.getElementById('img')) {
+            document.getElementById('img').addEventListener('change', (e) => {
+                const formData = new FormData();
+                console.log(this, this.files);
+                formData.append('img', this.files[0]);
+                axios.post('/post/img', formData)
+                .then((res) => {
+                    document.getElementById('img-url').value = res.data.url;
+                    document.getElementById('img-preview').src = res.data.url;
+                    document.getElementById('img-preview').style.display = 'inline';
+                })
+                .catch((err) => {
+                    console.log(err);
+                });
+            });
+        }
+        document.querySelectorAll('.twit-follow').forEach((tag) => {
+            tag.addEventListener('click', () => {
+                const myId = document.querySelector('#my-id');
+                if (myId) {
+                    const userId = tag.parantNode.querySelector('.twit-user-id').value;
+                    if (userId !== myId) {
+                        if( confirm('팔로잉 하시겠습니까?')) {
+                            axios.post(`/user/${userId}/follow`)
+                            .then(() => {
+                                location.reload();
+                            })
+                            .catch((err) => {
+                                console.error(err);
+                            });
+                        }
+                    }
+                }
+            });
+        });
+    </script>
+{% endblock %}
