--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,8 @@
                             <input type="password" id="password" name="password" required>
                         </div>
                         <a href="/join" id="join" class="btn">회원가입</a>
-                        <a href="/auth/kakako" id="kakao" class="btn">카카오톡</a>
+                        <button id="login" type="submit" class="btn">로그인</button>
+                        <a href="/auth/kakao" id="kakao" class="btn">카카오톡</a>
                     </form>
                 {% endif %}
             </div>
